@@ -7,7 +7,13 @@ plugins {
 }
 
 group = 'com.bachlinh.order'
-version = '1.0.0'
+version = "${libs.versions.mainProject.get()}"
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
 
 dependencies {
     implementation project(":common:utils")
@@ -42,12 +48,10 @@ dependencies {
 
     runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
 
-    compileOnly 'org.projectlombok:lombok'
     compileOnly "jakarta.servlet:jakarta.servlet-api"
     compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
 
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-    annotationProcessor 'org.projectlombok:lombok'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
@@ -102,4 +106,8 @@ bootJar {
 
 jar {
     enabled = true
+}
+
+compileJava {
+    options.compilerArgs += "--enable-preview"
 }
